Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-92203

Snowing example crashes with big intensity values

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.1
    • 6.1
    • Quick: 3D
    • None
    • 013bddc1414ae661a56d6f5b1b868d29918c1a34

      Steps:

      • Run particles testbed Snowing example
      • Slide intensity to max and emitRate to max
      • Change intensity and you soon get a crash with followig debug log:

      1 QQuick3DParticleSpriteParticle::updateParticleBuffer Qt6Quick3DParticles 0x7ff9dc69473c
      2 QQuick3DParticleSpriteParticle::updateParticleNode Qt6Quick3DParticles 0x7ff9dc6948f2
      3 QQuick3DParticleSpriteParticle::updateSceneManager Qt6Quick3DParticles 0x7ff9dc694a72
      4 QQuick3DSceneManager::updateDirtySpatialNode Qt6Quick3D 0x7ff9db1e2808
      5 QQuick3DSceneManager::updateDirtyNodes Qt6Quick3D 0x7ff9db1e24d3
      6 QQuick3DSceneManager::window Qt6Quick3D 0x7ff9db1e55f1
      7 QQuick3DViewport::updatePaintNode Qt6Quick3D 0x7ff9db1eefaf
      8 QQuickWindowPrivate::updateDirtyNode Qt6Quick 0x7ff955c58437
      9 QQuickWindowPrivate::updateDirtyNodes Qt6Quick 0x7ff955c587c5
      10 QQuickWindowPrivate::syncSceneGraph Qt6Quick 0x7ff955c57645
      11 QQuickOpenGLUtils::resetOpenGLState Qt6Quick 0x7ff955d52bbe
      12 QQuickOpenGLUtils::resetOpenGLState Qt6Quick 0x7ff955d53284
      13 QQuickOpenGLUtils::resetOpenGLState Qt6Quick 0x7ff955d524e7
      14 QThread::start Qt6Core 0x7ff953b64861
      15 BaseThreadInitThunk KERNEL32 0x7ff9f8427034
      16 RtlUserThreadStart ntdll 0x7ff9f8ae2651

        For Gerrit Dashboard: QTBUG-92203
        # Subject Branch Project Status CR V

            kagro Kaj Grönholm
            kagro Kaj Grönholm
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes