Handle particles maxAmount changes gracefully

Also handle the possibility that the particles amount is 0.

Pick-to: 6.1
Task-number: QTBUG-92203
Change-Id: Iebdc62d6161352fab8e0abdc065ed3c6b690cf56
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>